--- a/etape3.html
+++ b/etape3.html
@@ -50,7 +50,7 @@
 
         main h2 {
             padding-left: 25px;
-            /* width: max-content; */
+            width: max-content;
             background: url(img/little_apple.gif) no-repeat left bottom;
             border-bottom: 1px solid #9b2;
             font-size: 1.4em;
@@ -61,7 +61,7 @@
         main h3 {
             margin-left: 15px;
             padding-left: 5px;
-            /* width: max-content; */
+            width: max-content;
             border-bottom: 1px solid #9b2;
             border-left: 3px solid #9b2;
             color: #9b2;
