--- a/exo.html
+++ b/exo.html
@@ -7,136 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <title>Colored design - Étape 4</title>
+    <title>Colored design - Étape 5</title>
 
-    <style>
+    <!-- typo embarquée (en cdn : content delivery network) depuis google font -->
+    <link href="https://fonts.googleapis.com/css?family=Ibarra+Real+Nova:700|Open+Sans&display=swap" rel="stylesheet">
 
-        body {
-            margin: 10px 0;
-            padding: 0;
-            /* text-align center à cause d'Internet Explorer (les anciennes versions d'IE) */
-            text-align: center;
-            font: 0.8em 'Trebuchet MS', Helvetica, sans-serif; /* ceci est la version raccourcie des deux lignes suivantes */
-            /* font-size: 0.8em;
-            font-family: 'Trebuchet MS', Helvetica, sans-serif; */
-            background-color: #dea;
-
-        }
-
-        #conteneur {
-            text-align: left;
-            /* margin 0 et auto pour centrer le conteneur dans la page ATTENTION à donner une largeur (c'est une marge automatique) */
-            margin: 0 auto;
-            width: 770px;
-            border: 2px solid #ab4;
-            background-color: #fff;
-        }
-
-        header h1 {
-            /* hauteur du h1 dans le header */
-            height: 258px;
-            /* top ou bottom pour l'image dans le h1 */
-            background: url(img/apple.jpg) no-repeat left top;
-            /* background-image: url(img/apple.jpg);
-            background-repeat: no-repeat;
-            background-position: left bottom; */
-        }
-
-        /* h1#header a acienne manière d'écrire */
-        header h1 a {
-            /* l'image en arrière-plan du h1 */
-            width: 400px;
-            height: 70px;
-            display: block;
-            /* dès l'instant où on change d'inline en block il est préférable de mettre des tailles largeur et/ou hauteur à l'élément */
-            background: url(img/title.gif) no-repeat right;
-            position: relative;
-            left: 350px;
-            top: 15px;
-            /* pour masquer le texte */
-            text-indent: -5000px;
-        }
-
-        ul#menu {
-            height: 35px;
-            margin: 0;
-            padding: 0;
-            list-style-type: none;
-            background: url(img/bg_menu.gif) repeat-x 0 -25px;
-        }
-
-        ul#menu li {
-            text-align: center;
-            float: left;
-        }
-
-        ul#menu li a {
-            width: 130px;
-            display: block;
-            border-right: 2px solid #dea;
-            font-size: 1.2em;
-            font-weight: bold;
-            text-decoration: none;
-            line-height: 25px;
-            color: #fff;
-            letter-spacing: 2px;
-        }
-
-        ul#menu li a:hover {
-            background: url(img/bg_menu.gif) repeat-x 0 0;
-        }
-
-        main {
-            /* padding pour main afin de caler les contenus et de laisser la place à l'image en arrière-plan */
-            padding: 0 30px 0 100px;
-            background: url(img/bg_page.gif) no-repeat left top;
-        }
-
-        main h2 {
-            padding-left: 25px;
-            width: max-content;
-            background: url(img/little_apple.gif) no-repeat left bottom;
-            border-bottom: 1px solid #9b2;
-            font-size: 1.4em;
-            line-height: 25px;
-            color: #9b2;
-        }
-
-        main h3 {
-            margin-left: 15px;
-            padding-left: 5px;
-            width: max-content;
-            border-bottom: 1px solid #9b2;
-            border-left: 3px solid #9b2;
-            color: #9b2;
-        }
-
-        main p {
-            line-height: 1.7em;
-            text-align: justify;
-        }
-
-        main a {
-            color: #8a0;
-        }
-
-        main a:hover {
-            color: #9b2;
-        }
-
-        main a:visited {
-            color: #ab4;
-        }
-
-        footer p {
-            margin: 0;
-            padding-right: 30px;
-            color: #8a0;
-            line-height: 30px;
-            text-align: right;
-        }
-
-    </style>
+    <link rel="stylesheet" href="css/exo.css">
 
 </head>
 
@@ -164,7 +40,7 @@
 
         <!-- contenu principal -->
         <main>
-            <h2>Un titre - Étape 4</h2>
+            <h2>Un titre - Étape 5</h2>
 
             <p>Occaecat aliquip consectetur esse magna labore commodo amet in nostrud velit cupidatat pariatur fugiatin.
                 Magna ut ea reprehenderit labore veniam in aute elit nisi duis dolor. Minim occaecat esse ipsum
@@ -200,7 +76,7 @@
                 nulla. Incididunt et sit laborum cupidatat do minim reprehenderit est quis aliquip nulla duis proident.
             </p>
 
-            <h3>Un sous-titre - Étape 4</h3>
+            <h3>Un sous-titre - Étape 5</h3>
 
             <p>Excepteur duis est eu ex laborum voluptate eu anim nulla eu ullamco dolor est. Culpa deserunt nostrud
                 mollit amet nulla aute. Nostrud excepteur voluptate incididunt consequat qui nisi deserunt ipsum duis eu
